Fix search toggle visibility.

--- a/asset/sass/_screen.scss
+++ b/asset/sass/_screen.scss
@@ -446,13 +446,17 @@ header nav a {
 #search-form + button.search-toggle {
     bottom: 0;
     position: absolute;
-    width: 1.5 * $base-line-height;
-    height: 1.5 * $base-line-height;
     border-bottom: 0;
     color: darken($gray, 15%);
+    padding: 0;
 }
 
 #search-form.closed + .search-toggle .icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 1.5 * $base-line-height;
+    height: 1.5 * $base-line-height;
     right: 0;
     border: 1px solid $gray;
     border-top: 0;
@@ -461,6 +465,7 @@ header nav a {
         content: "\f002";
         font-family: "Font Awesome 5 Free";
         font-weight: 900;
+        display: block;
     }
 }
 
